# newtua-core

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml
src/: archive.rs  datetime.rs  decompress.rs  detect.rs  encoding.rs  error.rs  extract.rs  lib.rs  macos.rs  path_safety.rs  volume.rs
src/format/: apfs.rs  appimage.rs  ar.rs  bundle.rs  cab.rs  conda.rs  cpio.rs  crx.rs  deb.rs  dmg.rs  hfsplus.rs  iso.rs  mod.rs  msi.rs  rar.rs  rpm.rs  sevenz.rs  sfx.rs  squashfs.rs  tar.rs  warc.rs  wim.rs  xar.rs  zip.rs
src/format/legacy/: alz.rs  amiga.rs  dos.rs  mac.rs  mod.rs  nsis.rs  stuffit.rs
tests/: cab_handler.rs  cpio_handler.rs  deb_handler.rs  detect.rs  extract.rs  integration.rs  iso_handler.rs  lzc.rs  macos_skip.rs  msi_handler.rs  progress.rs  rar_handler.rs  rpm_handler.rs  selection.rs  sevenz_handler.rs  sfx_handler.rs  source.rs  tar_handler.rs  volume_open.rs  xar_handler.rs  zip_handler.rs  zipx_handler.rs
tests/fixtures/: apfs_bare.img  apfs_zlib.dmg  app.apk  book.epub  bzip2.zipx  corrupt.squashfs  cpio_newc.cpio  deflate64.zipx  dmg_adc.dmg  dmg_adc_chunk0.expected  dmg_bzip2.dmg  dmg_lzfse.dmg  dmg_lzma.dmg  dmg_zlib.dmg  doc.docx  ext.crx  ext2.crx  hello.rar  hello.txt.Z  hello.txt.br  hello.txt.lz4  hfs_ci.hfs  hfs_cs.hfs  lzma.zipx  malformed_oom.7z  meta.7z  meta.rar  minimal.rpm  multi.7z  mv.part1.rar  mv.part2.rar  mv.part3.rar  mv_content.txt  nested.xar  notar.conda  payload.tar.Z  payload.tar.br  payload.tar.lz4  pkg.conda  ppmd.zipx  (+18 more)
tests/integration/: apfs.rs  appimage.rs  ar_handler.rs  brotli.rs  bundles.rs  cab_handler.rs  conda.rs  deb_handler.rs  dmg.rs  extract.rs  hfsplus.rs  iso_handler.rs  legacy.rs  lz4.rs  lzc.rs  msi_handler.rs  progress.rs  rar_handler.rs  selection.rs  sevenz_handler.rs  squashfs.rs  tar_handler.rs  volume_open.rs  warc_handler.rs  wim.rs  xar_handler.rs  zip_handler.rs  zipx_handler.rs
