[package]
name = "newtua-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ar.workspace = true
filetime.workspace = true
thiserror.workspace = true
encoding_rs.workspace = true
chardetng.workspace = true
flate2.workspace = true
bzip2.workspace = true
cab.workspace = true
xz2.workspace = true
zip.workspace = true
zstd.workspace = true
lz4_flex.workspace = true
brotli-decompressor.workspace = true
tar.workspace = true
time.workspace = true
sevenz-rust2.workspace = true
unrar.workspace = true
tempfile.workspace = true
cpio.workspace = true
rpm.workspace = true
# XAR (.xar/.pkg): in-house decode-only reader (header + zlib TOC + heap). Uses
# the workspace flate2/bzip2/xz2 plus a tiny XML DOM; no apple-xar, no `ring`.
roxmltree = "0.21"
# MSI (.msi): CFB database with embedded CAB stream(s). The handler resolves the
# File/Component/Directory tables to real install paths (model C) and reuses
# CabHandler for the embedded CAB bytes. Always built.
msi.workspace = true
cdfs = "0.2.3"
goblin.workspace = true
warc.workspace = true
# SquashFS (.squashfs/.sfs): pure-Rust reader. Explicit gzip/zstd/lz4/lzo +
# parallel; backhand's `xz` feature stays OFF (its liblzma collides with our
# xz2 on `links = "lzma"`) — xz is decoded via xz2, see format/squashfs.rs.
# Reopens the file by path because backhand's BufReadSeek requires Send.
backhand = { workspace = true }
lzw-z = { path = "../lzw-z" }
# ZIP method-14 (LZMA) decode — see format/zip.rs::decode_zip_lzma.
lzma-rs.workspace = true

[features]
default = []

[dev-dependencies]
tar.workspace = true
tempfile.workspace = true
zip.workspace = true
cab.workspace = true
flate2.workspace = true
